<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.mapptracker.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/distance_top"
        android:text="@string/hello_world" />




    <TextView
        android:id="@+id/upload_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/upload_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pre_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/upload_title"
        android:layout_marginTop="@dimen/distance_top"
        android:text="@string/pre_send"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/start_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pre_send"
        android:layout_marginTop="@dimen/distance_top"
        android:text="@string/start_send"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/start_send"
        android:layout_marginTop="@dimen/distance_top">

        <TextView
            android:id="@+id/send_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_result"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </ScrollView>
</RelativeLayout>
